--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PrevenirWeb</title>
+  <title>Prevenir Express</title>
   <base href="/">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Centro Prevenir Express se caracteriza porque en sus cuatro lineas de negocio( Previsión Funeraria, Descuentos Médicos, Prevenir Óptica y Prevenir Fundación) buscan darle el valor que representa cada uno de nuestros clientes, ofreciéndole servicios de calidad a través de los mejores profesionales. ">
+  <meta name="keywords" content="óptica, funeraria, descuentos, médicos, fundación , Pasto, Ipiales"/>
+  <meta name="author" content="Grupo Prevenir Express"/>
+  <meta name="copyright" content="Grupo Prevenir Express" />
+  <meta name="robots" content= "index, follow">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -14,8 +20,20 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <a href="https://www.freepik.es/"></a>
 
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
-<link rel="stylesheet" href="styles.c6cd620bb9e76dd29d1c.css"></head>
+
+
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HVHLJZMLGJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HVHLJZMLGJ');
+</script>
+<link rel="stylesheet" href="styles.c8f701e54a9923b01c0d.css"></head>
 <body>
   <app-root></app-root>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -25,7 +43,7 @@
         <button class="botonFlotante flotanteCircle">
          <a href="https://api.whatsapp.com/send?phone=573104351937&text=Hola!%20quiero%20saber%20más%20de%20Prevenir%20Express!"><img src="assets/images/prevenir/whatsIcon.png" style="margin: auto; display: block; width: 60px;"></a>
       </div>
-  <script src="runtime-es2015.e8a2810b3b08d6a1b6aa.js" type="module"></script><script src="runtime-es5.e8a2810b3b08d6a1b6aa.js" nomodule defer></script><script src="polyfills-es5.931f63c2feef40f602a6.js" nomodule defer></script><script src="polyfills-es2015.0ef207fb7b4761464817.js" type="module"></script><script src="scripts.ff2f8a7ef91da75dd31d.js" defer></script><script src="main-es2015.74a3cb7dcf30771fa6ec.js" type="module"></script><script src="main-es5.74a3cb7dcf30771fa6ec.js" nomodule defer></script></body>
+  <script src="runtime-es2015.e8a2810b3b08d6a1b6aa.js" type="module"></script><script src="runtime-es5.e8a2810b3b08d6a1b6aa.js" nomodule defer></script><script src="polyfills-es5.931f63c2feef40f602a6.js" nomodule defer></script><script src="polyfills-es2015.0ef207fb7b4761464817.js" type="module"></script><script src="scripts.ff2f8a7ef91da75dd31d.js" defer></script><script src="main-es2015.98913ba1035326595cdd.js" type="module"></script><script src="main-es5.98913ba1035326595cdd.js" nomodule defer></script></body>
 
 
 </html>
